# MatiaOS

./: .nvimrc.lua  Cargo.toml  Makefile  README.md  rust-toolchain.toml
loader/: Cargo.toml  Makefile  build.rs
loader/src/: main.rs
loader/src/_arch/aarch64/cpu/: boot.rs
loader/src/bsp/: raspberrypi.rs
loader/src/bsp/device_driver/: common.rs
loader/src/bsp/raspberrypi/: loader.ld
matiaos/: Cargo.toml  build.rs
matiaos/src/: console.rs  cpu.rs  driver.rs  main.rs  panic_handler.rs  print.rs  time.rs
matiaos/src/_arch/aarch64/: cpu.rs  time.rs
matiaos/src/_arch/aarch64/cpu/: boot.s
matiaos/src/bsp/: device_driver.rs  raspberrypi.rs
matiaos/src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
matiaos/src/bsp/raspberrypi/: driver.rs  kernel.ld
matiaos/src/console/: null_console.rs
pusher/: Cargo.toml
pusher/src/: main.rs  session.rs  stdio.rs
