[package]
name = "matiaos"
version = "0.1.0"
edition = "2021"

[features]
default = ["bsp_rpi3"]
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "9.3.1"
tock-registers = "0.8.1"
